<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <TableLayout android:layout_width="wrap_content" android:id="@+id/tableLayout1" android:layout_height="match_parent">
        <TextView android:text="@string/blank" android:id="@+id/textView1" android:layout_height="2dip" android:background="@color/dividerbgcolor" android:layout_width="match_parent" android:layout_marginTop="5dip"></TextView>
        <LinearLayout android:id="@+id/linearLayout1" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/teama" android:textSize="12pt" android:id="@+id/teamaplayerstatslabel"></TextView>
        </LinearLayout>
        <TextView android:text="@string/blank" android:id="@+id/textView2" android:layout_height="2dip" android:background="@color/dividerbgcolor" android:layout_width="match_parent"></TextView>
        <TableLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:stretchColumns="0" android:id="@+id/teamaplayertable">
            <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:layout_height="wrap_content" android:text="@string/name" android:id="@+id/textView7" android:layout_width="wrap_content" android:gravity="left"></TextView>
                <TextView android:layout_height="wrap_content" android:text="@string/points" android:id="@+id/textView8" android:layout_width="wrap_content" android:layout_marginRight="10dip"></TextView>
                <TextView android:layout_height="wrap_content" android:id="@+id/textView9" android:layout_width="wrap_content" android:gravity="left" android:layout_marginRight="10dip" android:text="@string/tens"></TextView>
                <TextView android:layout_height="wrap_content" android:text="@string/powers" android:id="@+id/textView10" android:layout_width="wrap_content" android:layout_marginRight="10dip"></TextView>
                <TextView android:layout_height="wrap_content" android:text="@string/negs" android:id="@+id/textView11" android:layout_width="wrap_content" android:layout_marginRight="10dip"></TextView>
            </TableRow>
        </TableLayout>
        <TextView android:layout_width="wrap_content" android:text="@string/blank" android:id="@+id/textView3" android:layout_height="2dip" android:background="@color/dividerbgcolor"></TextView>
        <LinearLayout android:id="@+id/linearLayout2" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/teamb" android:textSize="12pt" android:id="@+id/teambplayerstatslabel"></TextView>
        </LinearLayout>
        <TextView android:layout_width="wrap_content" android:text="@string/blank" android:id="@+id/textView4" android:layout_height="2dip" android:background="@color/dividerbgcolor"></TextView>
        <TableLayout android:stretchColumns="0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/teambplayertable">
            <TableRow android:layout_width="wrap_content" android:id="@+id/TableRow01" android:layout_height="wrap_content">
                <TextView android:gravity="left" android:layout_height="wrap_content" android:text="@string/name" android:id="@+id/TextView02" android:layout_width="wrap_content"></TextView>
                <TextView android:layout_height="wrap_content" android:layout_marginRight="10dip" android:text="@string/points" android:id="@+id/TextView01" android:layout_width="wrap_content"></TextView>
                <TextView android:gravity="left" android:layout_height="wrap_content" android:layout_marginRight="10dip" android:id="@+id/TextView05" android:layout_width="wrap_content" android:text="@string/tens"></TextView>
                <TextView android:layout_height="wrap_content" android:layout_marginRight="10dip" android:text="@string/powers" android:id="@+id/TextView04" android:layout_width="wrap_content"></TextView>
                <TextView android:layout_height="wrap_content" android:layout_marginRight="10dip" android:text="@string/negs" android:id="@+id/TextView03" android:layout_width="wrap_content"></TextView>
            </TableRow>
        </TableLayout>
    </TableLayout>
</LinearLayout>
