<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <TableLayout android:layout_height="match_parent" android:layout_width="wrap_content" android:id="@+id/tableLayout1">
        <View android:layout_width="wrap_content" android:layout_height="2dip" android:id="@+id/View01" android:background="@string/dividerbackground"></View>
        <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/linearLayout1" android:orientation="vertical">
                <TextView android:layout_height="wrap_content" android:text="@string/teama" android:layout_width="wrap_content" android:textSize="12pt" android:id="@+id/teamastatslabel"></TextView>
            </LinearLayout>
        </TableRow>
        <View android:layout_width="wrap_content" android:id="@+id/view1" android:layout_height="2dip" android:background="@string/dividerbackground"></View>
        <LinearLayout android:layout_width="wrap_content" android:orientation="vertical" android:layout_height="wrap_content" android:id="@+id/linearLayout3">
            <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout5">
                <TextView android:layout_height="wrap_content" android:text="@string/score" android:layout_width="wrap_content" android:id="@+id/teamascore"></TextView>
            </LinearLayout>
            <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout9">
                <TextView android:layout_height="wrap_content" android:id="@+id/teamapowers" android:layout_width="wrap_content" android:text="@string/powers"></TextView>
            </LinearLayout>
            <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout10">
                <TextView android:layout_height="wrap_content" android:id="@+id/teamanegs" android:layout_width="wrap_content" android:text="@string/negs"></TextView>
            </LinearLayout>
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/linearLayout6">
                <TextView android:layout_height="wrap_content" android:id="@+id/teamappb" android:layout_width="wrap_content" android:text="@string/ppb"></TextView>
            </LinearLayout>
            <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout7">
                <TextView android:layout_height="wrap_content" android:id="@+id/teamatossupsheard" android:layout_width="wrap_content" android:text="@string/tossupsheard"></TextView>
            </LinearLayout>
            <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout8">
                <TextView android:layout_height="wrap_content" android:id="@+id/teamappt" android:layout_width="wrap_content" android:text="@string/ppt"></TextView>
            </LinearLayout>
            <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout4">
                <TextView android:layout_height="wrap_content" android:id="@+id/teamapp20th" android:layout_width="wrap_content" android:text="@string/pp20th"></TextView>
            </LinearLayout>
        </LinearLayout>
        <View android:layout_width="wrap_content" android:layout_height="2dip" android:id="@+id/View03" android:background="@string/dividerbackground"></View>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/tableRow2">
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/linearLayout2" android:orientation="vertical">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/teamb" android:textSize="12pt" android:id="@+id/teambstatslabel"></TextView>
            </LinearLayout>
        </TableRow>
        <View android:layout_width="wrap_content" android:layout_height="2dip" android:id="@+id/View02" android:background="@string/dividerbackground"></View>
        <LinearLayout android:layout_height="wrap_content" android:orientation="vertical" android:layout_width="wrap_content" android:id="@+id/LinearLayout04">
            <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/LinearLayout03">
                <TextView android:layout_height="wrap_content" android:text="@string/score" android:layout_width="wrap_content" android:id="@+id/teambscore"></TextView>
            </LinearLayout>
            <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/LinearLayout08">
                <TextView android:layout_height="wrap_content" android:text="@string/powers" android:layout_width="wrap_content" android:id="@+id/teambpowers"></TextView>
            </LinearLayout>
            <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/LinearLayout07">
                <TextView android:layout_height="wrap_content" android:text="@string/negs" android:layout_width="wrap_content" android:id="@+id/teambnegs"></TextView>
            </LinearLayout>
            <LinearLayout android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/LinearLayout01">
                <TextView android:layout_height="wrap_content" android:text="@string/ppb" android:layout_width="wrap_content" android:id="@+id/teambppb"></TextView>
            </LinearLayout>
            <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/LinearLayout02">
                <TextView android:layout_height="wrap_content" android:text="@string/tossupsheard" android:layout_width="wrap_content" android:id="@+id/teambtossupsheard"></TextView>
            </LinearLayout>
            <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/LinearLayout05">
                <TextView android:layout_height="wrap_content" android:text="@string/ppt" android:layout_width="wrap_content" android:id="@+id/teambppt"></TextView>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/LinearLayout06">
                <TextView android:layout_height="wrap_content" android:text="@string/pp20th" android:layout_width="wrap_content" android:id="@+id/teambpp20th"></TextView>
            </LinearLayout>
        </LinearLayout>
    </TableLayout>
</LinearLayout>
